--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -24,7 +24,7 @@
     </style>
 
     <style name="ListLabelFontStyle.Blue">
-        <item name="android:textColor">#0000FF</item>
+        <item name="android:textColor">#2222F0</item>
     </style>
 
     <style name="ListLabelFontStyle.Blue.Large">
